tests/sksl/errors/Ossfuzz38107.glsl
### Compilation failed:

error: 6: invalid token
1 error
